--- a/Portfolio.css
+++ b/Portfolio.css
@@ -408,6 +408,15 @@ nav ol {
     }
 }
 
+
+h1, h3 {
+    display: inline-block;
+    margin: 20px auto;      /* centre horizontalement */
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 h1 {
       display: inline-block;        /* 👉 MODIF : largeur = contenu */
       max-width: 90%;               /* (sécurité pour mobile) */
@@ -569,6 +578,7 @@ footer {
         padding: 8px;            /* 👉 MODIF */
     }
 }
+
 
 
 
