--- a/Portfolio.css
+++ b/Portfolio.css
@@ -43,19 +43,19 @@ nav ol {
 
 /* Zone GAUCHE, CENTRE, DROITE */
 .nav-left {
-    flex: 1;
+    flex: 0 1 auto; /* s'adapte à la taille du contenu */
     display: flex;
     justify-content: flex-start;
 }
 
 .nav-center {
-    flex: 1;
+    flex: 1; /* si tu veux remettre ta barre de recherche plus tard */
     display: flex;
     justify-content: center;
 }
 
 .nav-right {
-    flex: 1;
+    flex: 0 1 auto; /* la zone ne reste plus bloquée à 33% */
     display: flex;
     justify-content: flex-end;
 }
@@ -596,6 +596,7 @@ footer {
 
     }
 }
+
 
 
 
