--- a/Portfolio.css
+++ b/Portfolio.css
@@ -25,7 +25,7 @@ nav {
       width: 97%;
       z-index: 999;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      flex-wrap: wrap;  /* 👉 MODIF : permet aux éléments de passer à la ligne sur mobile */
+      flex-wrap: nowrap;  /* 👉 MODIF : permet aux éléments de passer à la ligne sur mobile */
       width: 100%;      /* 👉 MODIF : remplace 97% pour éviter les débordements */
 
 }
@@ -592,6 +592,7 @@ footer {
 
     }
 }
+
 
 
 
